--- a/package.json
+++ b/package.json
@@ -15,12 +15,20 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "@testing-library/dom": "^7.31.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^6.0.0",
+    "@testing-library/user-event": "^13.1.9",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
+    "jest-axe": "^4.1.0",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.0",
+    "react-test-renderer": "^17.0.2",
+    "react-testing-library": "^8.0.1",
     "typescript": "4.1.3"
   },
   "scripts": {
