--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest-axe": "^4.1.0",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.0",
+    "prop-types": "^15.7.2",
     "react-test-renderer": "^17.0.2",
     "react-testing-library": "^8.0.1",
     "typescript": "4.1.3"
