--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "husky": "^7.0.4",
     "jest-axe": "^5.0.1",
     "lint-staged": "^12.3.3",
+    "postcss-normalize": "^10.0.1",
     "prettier": "2.5.1",
     "prop-types": "^15.8.1",
     "react-test-renderer": "^17.0.2",
